# NogoAI

./: CMakeLists.txt  Combine_Plus.cpp  LastVersion.cpp  MCTS_UCT.cpp  example.cpp  main.cpp  main06.cpp  main_debug.cpp  main_debug2.cpp  main_expandall.cpp  不围棋.md  不围棋报告.docx  测试参数记录表.xlsx
测试参数/: Params (1).xls  测试参数记录表 (1).xlsx
